<resources>
    <string name="app_name">PersonalInfo</string>
    <string name="first_name">First name</string>
    <string name="family_name">Family name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birthdate">Birthdate</string>
    <string name="country_state">Country</string>
    <string name="btn_done">Done</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_select">Select</string>
    <string name="country">Country</string>
    <string name="state">State</string>

    <string name="saved_first_name">saved_first_name</string>
    <string name="saved_family_name">saved_family_name</string>
    <string name="saved_age">saved_age</string>
    <string name="saved_email">saved_email</string>
    <string name="saved_phone">saved_phone</string>
    <string name="saved_birthdate">saved_birthdate</string>
    <string name="saved_country">saved_country</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
